# simple-rust-bundler

./: .gitignore  Cargo.toml  README.md  memo.txt
src/: bundle.rs
src/bundle/: settings.rs  updater_bundle.rs  util.rs
src/bundle/linux/: debian.rs  rpm.rs
src/bundle/macos/: dmg.rs  mod.rs  pkg.rs
src/bundle/macos/templates/pkg/: bundle_pkg
src/bundle/windows/: msi.rs
src/bundle/windows/msi/: wix.rs
