#workspace = { }

[package]
edition = "2021"
rust-version = "1.71"
name = "simple-rust-bundler"
version = "0.0.3"
authors = [
    "Masato Yuna <masato.yuna@gmail.com>",
    "George Burton <burtonageo@gmail.com>",
    "Tauri Programme within The Commons Conservancy",
]
exclude = ["CHANGELOG.md", "/target", "rustfmt.toml"]
description = "rust bundle tool from tauri bundler fork"
readme = "README.md"
keywords = []
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/generalworksinc/simple-rust-bundler.git"


[lib]
name = "simple_bundler"
path = "src/lib.rs"

[dependencies]
rpm = "0.13.1"

[dependencies.anyhow]
version = "1.0"

[dependencies.dirs-next]
version = "2.0"

[dependencies.dunce]
version = "1"

[dependencies.handlebars]
version = "4.5"

[dependencies.hex]
version = "0.4"

[dependencies.image]
version = "0.24.7"

[dependencies.libflate]
version = "2.0"

[dependencies.log]
version = "0.4.20"
features = ["kv_unstable"]

[dependencies.native-tls]
version = "0.2"
optional = true

[dependencies.os_pipe]
version = "1"

[dependencies.semver]
version = "1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.sha1]
version = "0.10"

[dependencies.sha2]
version = "0.10"

[dependencies.strsim]
version = "0.11.0"

[dependencies.tar]
version = "0.4.40"

[dependencies.tauri-utils]
version = "1.5.2"
features = ["resources"]

[dependencies.tempfile]
version = "3.8.1"

[dependencies.thiserror]
version = "1.0"

[dependencies.ureq]
version = "2.9.1"
default-features = false

[dependencies.walkdir]
version = "2"

[dependencies.zip]
version = "0.6"

[features]
default = ["rustls"]
native-tls = ["ureq/native-tls"]
native-tls-vendored = ["native-tls", "native-tls/vendored"]
rustls = ["ureq/tls"]

[target."cfg(any(target_os = \"macos\", target_os = \"windows\"))".dependencies.regex]
version = "1"

[target."cfg(target_os = \"linux\")".dependencies.ar]
version = "0.9.0"

[target."cfg(target_os = \"linux\")".dependencies.heck]
version = "0.4"

[target."cfg(target_os = \"linux\")".dependencies.md5]
version = "0.7.0"

[target."cfg(target_os = \"macos\")".dependencies.icns]
version = "0.1"
package = "tauri-icns"

[target."cfg(target_os = \"macos\")".dependencies.plist]
version = "1"

[target."cfg(target_os = \"macos\")".dependencies.time]
version = "0.3"
features = ["formatting"]

#[target."cfg(target_os = \"windows\")".dependencies.bitness]
#version = "0.4"

[target."cfg(target_os = \"windows\")".dependencies.glob]
version = "0.3"

[target."cfg(target_os = \"windows\")".dependencies.uuid]
version = "1"
features = ["v4", "v5"]

[target."cfg(target_os = \"windows\")".dependencies.winreg]
version = "0.52.0"

[target."cfg(target_os = \"windows\")".dependencies.windows-sys]
version = "0.48"
features = [
"Win32_System_SystemInformation",
"Win32_System_Diagnostics_Debug"
]

